--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </tr>
   </table>
   <hr>
-  <h4><a href="C:\Users\NOUFAL\OneDrive\Documents\web development\HTML-PERSONAL SITE\contactme.html">Contact ME</a></h4>
+  <h4><a href="contactme.html">Contact ME</a></h4>
   <hr>
 </body>
 
